--- a/css/index.css
+++ b/css/index.css
@@ -1,54 +1,114 @@
-*{
-  padding: 0;
-  margin: 0;
-  font-family: 'Open Sans', sans-serif;
-  box-sizing: border-box;
-}
+  *{
+    padding: 0;
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
+  }
 
-main{
-  padding: 50px 8% 50px 8%;
-}
+  #main-master {
+    padding: 20px 8% 50px 8%;
+  }
 
-header{
-  background: rgba(237, 239, 216, 0.70);
-}
+  nav{
+    background: rgba(237, 239, 216, 0.70);
+  }
 
-header a{
-  text-decoration: none;
-}
+  #menu a{
+    text-decoration: none;
+  }
 
-header ul{
-  display: flex;
-  list-style: none;
-  justify-content: flex-end;
-  padding-right: 2rem;
-  height: 65px;
-}
 
-header li{
-  padding: 1.5rem 1.5rem 1rem 1.5rem;
-}
+  #menu ul{
+    display: flex;
+    list-style: none;
+    justify-content: flex-end;
+    padding-right: 2rem;
+    height: 65px;
+  }
 
-.text, p{
-  font-size: 20px;
-  line-height: 30px;
-  text-align: justify;
-  padding-top: 25px;
-}
+  #menu li{
+    padding: 1.5rem 1.5rem 1rem 1.5rem;
+  }  
 
-h1{
-  font-size: 2rem;
-}
+  #vegetarian li{
+    margin-left: 3rem;
+    padding-top: 20px;
+  }
 
-main li{
-  margin-left: 5rem;
-  padding-top: 20px;
-}
+  #citation{
+    margin-left: 3rem;
+  }
 
-#citation{
-  padding-left: 5rem;
-}
+  /* Extra small devices (portrait phones, less than 576px) */
+  @media (max-width: 575.98px) {
+    .text, p{
+      font-size: 16px;
+      line-height: 20px;
+      text-align: justify;
+      padding-top: 20px;
+    }
 
-.topic{
-  padding-bottom: 5rem;
-}
+    h1{
+      font-size: 28px;
+    }
+
+    .topic{
+      padding-bottom: 3.5rem;
+    }
+  }
+
+  /*Small devices (landscape phones, 576px and up)*/
+  @media (min-width: 576px) { 
+    .text, p{
+      font-size: 17px;
+      line-height: 22px;
+      text-align: justify;
+      padding-top: 20px;
+    }
+
+    h1{
+      font-size: 29px;
+    }
+
+
+    .topic{
+      padding-bottom: 3.5rem;
+    }
+
+  }
+
+  /*Medium devices (tablets, 768px and up)*/
+  @media (min-width: 768px) {
+    
+
+  /*Large devices (desktops, 992px and up)*/
+  @media (min-width: 992px) {
+    .text, p{
+      font-size: 20px;
+      line-height: 27px;
+      text-align: justify;
+      padding-top: 20px;
+    }
+
+    h1{
+      font-size: 29px;
+    }
+
+    #vegetarian li{
+      margin-left: 6rem;
+    }
+
+    #citation{
+      margin-left: 6rem;
+    }
+
+    .topic{
+      padding-bottom: 3.5rem;
+    }
+  }
+
+  }
+
+  /*Extra large devices (large desktops, 1200px and up)*/
+  @media (min-width: 1200px) { ... }
+
