--- a/css/locals.css
+++ b/css/locals.css
@@ -1,4 +1,15 @@
+*{
+  padding: 0;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
+}
+
 #map {
-  height: 50vh;
-  width: 100vw;
+  height: 80vh;
+  width: 100%;
+}
+
+#card-columns{
+	justify-content: center;
 }
