--- a/css/locals.css
+++ b/css/locals.css
@@ -18,18 +18,17 @@
   font-size: 1.5rem;
 }
 
-
-a { 
-  color: inherit; 
-} 
+a {
+  color: inherit;
+}
 
 #modalIcons{
-	align-items: center;
+  align-items: center;
 }
 
 #modalIcons :last-child{
 }
 
-
-
-	
+h5 .badge {
+  font-size: 0.7rem;
+}
