--- a/css/utils-links.css
+++ b/css/utils-links.css
@@ -4,3 +4,22 @@
   font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
 }
+
+.fab,
+.fas{
+  font-size: 50px;
+  justify-content: center;
+  padding: 60px 0 30px 0;
+}
+
+.card-text{
+  text-align: justify;
+}
+
+img{
+  max-width: 300px;
+}
+
+.card-img-top{
+ align-self: center;
+}
