--- a/css/utils-links.css
+++ b/css/utils-links.css
@@ -5,8 +5,8 @@
   box-sizing: border-box;
 }
 
-.fab,
-.fas{
+header .fab,
+header .fas{
   font-size: 50px;
   justify-content: center;
   padding: 60px 0 30px 0;
