--- a/css/utils-links.css
+++ b/css/utils-links.css
@@ -9,7 +9,11 @@ header .fab,
 header .fas{
   font-size: 50px;
   justify-content: center;
-  padding: 60px 0 30px 0;
+  padding: 70px 0 30px 0;
+}
+
+header .fas{
+  padding: 30px 0 30px 0;
 }
 
 .card-text{
