--- a/css/base.css
+++ b/css/base.css
@@ -9,6 +9,9 @@
     background-color: #66871F;
 }
 
+/* .bg-green{
+    background-color: #477d55;
+} */
 
 #nav_logo{
     height: 50px;
@@ -16,6 +19,24 @@
 
 .navbar{
     padding: 2px 43px 2px 43px;
+}
+
+.navbar-toggler{
+    background-color: #FDFFB2;
+}
+
+.footer {
+    background-color: #f5f5f5;
+}
+
+footer .text-muted{
+    justify-content: center;
+    align-items: center;
+}
+
+.fa-heart{
+    padding: 0 5px 0 5px;
+    color: #f60a0ad1;
 }
 
 
