--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,16 @@
     font-size: 60px;
   }
 
+  #vegetarian_figure,
+  #vegan_figure{
+    padding-top: 20px;
+  }
+
+
+
+
+
+
 
   /* Extra small devices (portrait phones, less than 576px) */
   @media (max-width: 575.98px) {
@@ -102,7 +112,7 @@
     }
 
     #citation{
-      margin-left: 6rem;
+      margin-left: 8rem;
     }
 
     .topic{
